# leptos-tabler-icons

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  release.toml  rustfmt.toml
.github/workflows/: post-release.yaml
src/: icons.rs  lib.rs
