[package]
name = "leptos-tabler-icons"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Tabler Icons for Leptos"
repository = "https://github.com/mrvillage/leptos-tabler-icons"

[dependencies.leptos]
git = "https://github.com/leptos-rs/leptos.git"
branch = "main"
features = ["rustls", "serde", "nightly"]

[build-dependencies]
include_dir = "0.7.3"
regex = "1.9.1"
